force-app/main/default/objects/AgentMatrix__c/AgentMatrix__c.object-meta.xml
<CustomObject>
    <description>Oggetto di configurazione per recuperare le associazione degli agenti, agenzie e codici associati.</description>
    <label>Matrice Agenti</label>
    <nameField>
        <displayFormat>AM-{00000000}</displayFormat>
        <label>Campo &quot;Name&quot;</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Matrici Agenti</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>