force-app/main/default/objects/AgentMatrix__c/fields/AgencyName__c.field-meta.xml
<CustomField>
    <fullName>AgencyName__c</fullName>
    <label>Nome Agenzia</label>
    <length>100</length>
    <type>Text</type>
</CustomField>