force-app/main/default/objects/AgentMatrix__c/fields/AgentCode__c.field-meta.xml
<CustomField>
    <fullName>AgentCode__c</fullName>
    <label>Codice Agente</label>
    <length>30</length>
    <type>Text</type>
</CustomField>