force-app/main/default/objects/AgentMatrix__c/fields/AgentFirstName__c.field-meta.xml
<CustomField>
    <fullName>AgentFirstName__c</fullName>
    <label>Nome Agente</label>
    <length>100</length>
    <type>Text</type>
</CustomField>