force-app/main/default/objects/AgentMatrix__c/fields/AgentLastName__c.field-meta.xml
<CustomField>
    <fullName>AgentLastName__c</fullName>
    <label>Cognome Agente</label>
    <length>100</length>
    <type>Text</type>
</CustomField>