force-app/main/default/objects/AgentMatrix__c/fields/CollaborationEndDate__c.field-meta.xml
<CustomField>
    <fullName>CollaborationEndDate__c</fullName>
    <label>Data fine rapporto</label>
    <type>Date</type>
</CustomField>