force-app/main/default/objects/AgentMatrix__c/fields/IsMonitoring__c.field-meta.xml
<CustomField>
    <fullName>IsMonitoring__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Monitoraggio attivo</label>
    <type>Checkbox</type>
</CustomField>