force-app/main/default/objects/AgentMatrix__c/fields/LowerChannelAgency__c.field-meta.xml
<CustomField>
    <fullName>LowerChannelAgency__c</fullName>
    <label>Canale Inferiore Agenzia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AGENZIE</fullName>
            </value>
            <value>
                <fullName>BA</fullName>
            </value>
            <value>
                <fullName>BACK OFFICE</fullName>
            </value>
            <value>
                <fullName>CCI</fullName>
            </value>
            <value>
                <fullName>GDA_ASS</fullName>
            </value>
            <value>
                <fullName>HCP</fullName>
            </value>
            <value>
                <fullName>id di sistema</fullName>
            </value>
            <value>
                <fullName>ND</fullName>
            </value>
            <value>
                <fullName>PA&amp;CO</fullName>
            </value>
            <value>
                <fullName>SME</fullName>
            </value>
            <value>
                <fullName>SPORTELLI</fullName>
            </value>
            <value>
                <fullName>SPORTELLI_HCM</fullName>
            </value>
            <value>
                <fullName>SPORTELLI_OUT</fullName>
            </value>
            <value>
                <fullName>SPORTELLI_PH</fullName>
            </value>
            <value>
                <fullName>SPORTELLI_TOP</fullName>
            </value>
            <value>
                <fullName>TLS</fullName>
            </value>
            <value>
                <fullName>TOP</fullName>
            </value>
            <value>
                <fullName>WEB_SELF</fullName>
            </value>
            <value>
                <fullName>AGENZIE BUSINESS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>