force-app/main/default/objects/AgentMatrix__c/fields/UpperChannelAgency__c.field-meta.xml
<CustomField>
    <fullName>UpperChannelAgency__c</fullName>
    <label>Canale Superiore Agenzia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CRM</fullName>
            </value>
            <value>
                <fullName>id di sistema</fullName>
            </value>
            <value>
                <fullName>ND</fullName>
            </value>
            <value>
                <fullName>PA&amp;CO</fullName>
            </value>
            <value>
                <fullName>TOP</fullName>
            </value>
            <value>
                <fullName>VI</fullName>
            </value>
            <value>
                <fullName>WEB</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>