force-app/main/default/objects/AgentMatrix__c/fields/UserIdentification__c.field-meta.xml
<CustomField>
    <fullName>UserIdentification__c</fullName>
    <label>Identificativo Utente</label>
    <length>100</length>
    <type>Text</type>
</CustomField>