force-app/main/default/objects/AgentMatrix__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>AgencyName__c</columns>
    <columns>AgencyCode__c</columns>
    <columns>AgentFirstName__c</columns>
    <columns>AgentLastName__c</columns>
    <columns>AgentCode__c</columns>
    <columns>UserIdentification__c</columns>
    <columns>Channel__c</columns>
    <columns>IsMonitoring__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>